--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <h3>MPJ، اصفهان، ایران</h3>
                         <span>تیر ۱۴۰۱ – اکنون</span>
                     </div>
-                    <h4>توسعه‌دهنده ارشد هوش مصنوعی <small>حضوری (تمام وقت)</small></h4>
+                    <h3>توسعه‌دهنده ارشد هوش مصنوعی <small>حضوری (تمام وقت)</small></h4>
                     <ul>
                         <li>رهبری بخش هوش مصنوعی واحد تحقیق و توسعه (IoT) گروه صنایع MPJ که بیش از ۲ نفر کارمند در ۳ دپارتمان شامل پردازش ویدئو، صدا، تصویر و متن دارد.</li>
                         <li>برنامه‌ریزی و پیاده‌سازی ۴ دمو برای تشخیص آتش، بهینه‌سازی مصرف برق در خانه، تشخیص فعالیت‌های انسانی از ویدئو و تشخیص صدای فرمان فارسی با Tensorflow و Keras.</li>
@@ -342,8 +342,8 @@
                     </div>
                     <ul>
                         <li><strong>کارشناسی ارشد مهندسی هوش مصنوعی</strong></li>
-                        <li><strong>عنوان پایان‌نامه:</strong> تشخیص فعالیت غیرعادی انسان با استفاده از یادگیری عمیق</li>
-                        <li><strong>عنوان مقاله:</strong> A Transformer-based model for abnormal activity recognition in video</li>
+                        <li><a href= "https://kouroshkiani.com/msc-students/#1696356718618-d69acd63-64ae"><strong>عنوان پایان‌نامه:</strong> تشخیص فعالیت غیرعادی انسان با استفاده از یادگیری عمیق</a></li>
+                        <li><a href="https://modelling.semnan.ac.ir/article_8569.html?lang=fa"><strong>عنوان مقاله:</strong> A Transformer-based model for abnormal activity recognition in video</a></li>
                     </ul>
                 </div>
         
@@ -452,7 +452,7 @@
                         <h3>MPJ, Isfahan, IR</h3>
                         <span>July 2022 – Present</span>
                     </div>
-                    <h4>Senior AI developer , <small>Onsite (Full time)</small></h4>
+                    <h3>Senior AI developer , <small>Onsite (Full time)</small></h4>
                     <ul>
                         <li>Led the artificial intelligence department of the MPJ Industries Group's R&D (IoT) unit, which has more than 2 employees in 3 departments including video, audio, image and text processing.</li>
                         <li>Planning and implementation of 4 demos for fire detection, optimization of electricity consumption at home, recognition of human activities from video and recognition of Persian command voice with Tensorflow and Keras.</li>
@@ -496,8 +496,8 @@
                     </div>
                     <ul>
                         <li><strong>M.Sc. in Artificial intelligence Engineering</strong></li>
-                        <li><strong>Thesis title:</strong> Abnormal human action recognition using deep learning</li>
-                        <li><strong>Article tittle:</strong> A Transformer-based model for abnormal activity recognition in video</li>
+                        <li><a href= "https://kouroshkiani.com/msc-students/#1696356718618-d69acd63-64ae"><strong>Thesis title:</strong> Abnormal human action recognition using deep learning</a></li>
+                        <li><a href="https://modelling.semnan.ac.ir/article_8569.html?lang=en"><strong>Article tittle:</strong> A Transformer-based model for abnormal activity recognition in video</a></li>
                     </ul>
                 </div>
 
